--- a/src/css/add.css
+++ b/src/css/add.css
@@ -21,24 +21,32 @@
     margin: auto;
 }
 
-.footer {
+.add_footer {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     border-top: 1px solid #e9ecef;
     background-color: #fff;
-
 }
 
 .footer-button {
     order: 1;
     flex: none;
     margin: 8px;
+    border: 0;
+    height: 36px;
+    padding: 0 16px;
+    text-decoration: none;
+    font-size: 13px;
+    font-weight: 500;
+    border-radius: 4px;
 }
+.footer-button:not([disabled]) {cursor: pointer}
 
 .flex-grid:not(.--inline) {
     display: flex
@@ -61,6 +69,7 @@
 }
 
 .form-label {
+    position: relative;
     display: block;
     margin-bottom: 4px;
     font-weight: 700;
@@ -87,19 +96,37 @@
     padding: 10px;
     background: #e9ecef;
     border-radius: 4px;
+    align-items: center;
+    justify-content: space-between;
+    cursor: default;
 }
 
-.room + .room {
-    margin-top: 8px
-}
+.room:not(.--active) {cursor: pointer}
 
 .room.--active {
     color: #fff;
     background-color: #007dff;
 }
 
+.room + .room {
+    margin-top: 8px
+}
+
+.room-main {
+    display: flex;
+}
+
 .room-times {
     margin-right: 16px;
+}
+
+.room-remove {
+    margin: 0 10px 0 16px;
+    cursor: pointer;
+}
+
+.room.--active .room-remove-icon {
+    fill: #fff;
 }
 
 .--padding-0 {
@@ -108,6 +135,37 @@
 
 .--padding-bottom-0 {
     padding-bottom: 0
+}
+
+
+.form-chosen-wrapper {
+    padding: 8px 0;
+}
+
+.form-chosen-item {
+    display: inline-flex;
+    align-items: center;
+    margin: 0 8px 8px 0;
+    background-color: #e9ecef;
+    border-radius: 16px;
+}
+
+.form-chosen-item-img {
+    border-radius: 50%;
+}
+
+.form-chosen-item-name {
+    font-size: 13px;
+    margin-left: 8px;
+}
+
+.form-chosen-item-remove {
+    width: 10px;
+    height: 10px;
+    background-image: url("../assets/close.svg");
+    background-repeat: no-repeat;
+    margin: 0 10px 0 16px;
+    cursor: pointer;
 }
 
 @media only screen and (min-width: 769px) {
@@ -154,7 +212,7 @@
         padding-top: 16px;
     }
 
-    .footer {
+    .add_footer {
         border: 0;
         position: relative;
         justify-content: flex-end;
@@ -168,6 +226,7 @@
         background-color: #fff;
         color: #f33;
         border-radius: 0;
+        border: 0;
         border-top: 8px solid #e9ecef;
         border-bottom: 8px solid #e9ecef;
     }
